tests/ui/consts/eval_type_mismatch.stderr
error: the constant `A` is not of type `i64`
  --> $DIR/eval_type_mismatch.rs:5:38
   |
LL | impl<const A: usize, const B: usize> Outer<A, B>
   |                                      ^^^^^^^^^^^ expected `i64`, found `usize`
   |
note: required by a bound in `Outer`
  --> $DIR/eval_type_mismatch.rs:4:14
   |
LL | struct Outer<const A: i64, const B: usize>();
   |              ^^^^^^^^^^^^ required by this bound in `Outer`

error[E0599]: no function or associated item named `o` found for struct `Outer<1, 1>` in the current scope
  --> $DIR/eval_type_mismatch.rs:15:20
   |
LL | struct Outer<const A: i64, const B: usize>();
   | ------------------------------------------ function or associated item `o` not found for this struct
...
LL |     Outer::<1, 1>::o();
   |                    ^ function or associated item not found in `Outer<1, 1>`
   |
   = note: the function or associated item was found for
           - `Outer<A, B>`

error[E0308]: mismatched types
  --> $DIR/eval_type_mismatch.rs:5:44
   |
LL | impl<const A: usize, const B: usize> Outer<A, B>
   |                                            ^ expected `i64`, found `usize`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
